[project]
name = "swarmintelligenceandevolutionaryalgorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "shapely>=2.1.2",
    "streamlit>=1.50.0",
]
