[project]
name = "swarmintelligenceandevolutionaryalgorithms"
version = "0.1.0"
description = "Swarm Intelligence and Evolutionary Algorithms"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dynaconf>=3.2.12",
    "geopandas>=1.1.1",
    "imageio>=2.37.2",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "streamlit>=1.50.0",
    "threadpoolctl>=3.6.0",
]

[project.optional-dependencies]
torch = [
    "torch",
    "torchvision",
    "torchaudio",
]
